syntax = "proto2";

package hdfs;

option java_package = "ds.hdfs";
option java_outer_classname = "Proto_Defn";

message DataNodeInfo{
	required int32 id = 1; //not sure how to assign ids yet
	required string name = 2;
	required string ip = 3;
	required int32 port = 4;
}

//dataNode -> nameNode
message BlockReport{ 
	required DataNodeInfo dataNodeInfo = 1;
	repeated string chunkName = 2; //i.e foo101
}

//client -> nameNode
message ClientRequest{
	enum ClientRequestType{
		GET = 0;
		PUT = 1;
		LIST = 2;
	}
	required ClientRequestType requestType = 1;
	optional string fileName = 2;
}



//nameNode -> client
message GetResult{
	repeated ChunkLocations locations = 1;
}

message ChunkLocations{
	repeated DataNodeInfo dataNodeInfo = 1;
	required string chunkName = 2;
}



//nameNode -> client
message ListResult{
	repeated string fileName = 1;
}